added a paragraph of text

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -9,5 +9,6 @@
 <body>
     <h1>SITO WEB COOOOL</h1>
     <p>Saludos gente lindaaaaa</p>
+    <p>Por favor dime como te pareció el curso</p>
 </body>
 </html>
